...
                        android:ems="10"
                        android:layout_below="@+id/stepOne"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/stepOne"
                        android:layout_alignEnd="@+id/stepOne"
                        android:id="@+id/locationEditText"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:hint="Location" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/locationEditText"
...
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/stepTwo"
                        android:id="@+id/startDateEditText"
                        android:hint="Pick Start Date"
                        android:paddingLeft="@dimen/activity_horizontal_margin"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/stepTwo"
                        android:id="@+id/endDateEditText"
                        android:hint="Pick End Date"
                        android:paddingRight="@dimen/activity_horizontal_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
...
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/stepThree"
                        android:id="@+id/startTimeText"
                        android:hint="Pick Start Time"
                        android:paddingLeft="@dimen/activity_horizontal_margin"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/stepThree"
                        android:id="@+id/endTimeText"
                        android:hint="Pick End Date"
                        android:paddingRight="@dimen/activity_horizontal_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
...
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search!"
        android:id="@+id/searchButton"
        android:layout_below="@id/tabHost"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
