<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In or Sign Up"
        android:id="@+id/introEditText"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cardview_light_background"
        android:textSize="16dp" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introEditText"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/signInProgress"/>

    <EditText
        android:title="Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:hint=" Email"
        android:inputType="textEmailAddress"
        android:focusable="true"
        android:textSize="20dp"
        android:textColorHighlight="#fb00ff"
        android:textColorHint="#2945a3"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/editbox_dropdown_light_frame" />
    <TextView android:text="ParkHere310"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeTextView"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_above="@id/emailEditText"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cardview_light_background"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginBottom= "90dp"/>


    <EditText
        android:title="Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="15dp"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/emailEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/emailEditText"
        android:layout_alignEnd="@+id/emailEditText"
        android:textColorHint="#2945a3"
        android:hint=" Password"
        android:background="@android:drawable/editbox_dropdown_light_frame" />


    <Button
        android:title="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login"
        android:layout_marginTop="10dp"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true" />


    <Button
        android:title="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/registerButton"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:text="Forgot Password?"
        android:id="@+id/forgotButton"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
