<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">


        <ImageView
            android:id="@+id/profilePicImageView"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_face_black_24dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center" />


        <!--Name TextView/EditText-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height= "wrap_content"
                android:id="@+id/nameTextView"
                android:text="Name"
                android:paddingTop="15dp"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameEditText"
                android:hint=""
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:layout_centerHorizontal="true"
                android:inputType="textCapWords"
                android:textColorHighlight="#fb00ff"
                android:textColorHint="#009688"
                android:layout_below="@id/nameTextView" />

        </RelativeLayout>

        <!--Email TextView/EditText-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height= "wrap_content"
                android:id="@+id/emailTextView"
                android:text="Email"
                android:layout_centerHorizontal="true"
                android:paddingTop="20dp"
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailEditText"
                android:hint=""
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:inputType="textEmailAddress"
                android:textColorHighlight="#fb00ff"
                android:textColorHint="#009688"
                android:layout_below="@+id/emailTextView" />

        </RelativeLayout>

        <!--Phone TextView/EditText-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height= "wrap_content"
                android:id="@+id/phoneTextView"
                android:text="Phone"
                android:layout_centerHorizontal="true"
                android:paddingTop="20dp"
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneEditText"
                android:hint=""
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:inputType="phone"
                android:textColorHighlight="#fb00ff"
                android:textColorHint="#009688"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/phoneTextView"/>

        </RelativeLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:progressTint="#FFCC00"
                android:rating="0" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View History"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/viewHostHistoryButton"
                 />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/editUserDetailsToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textOn="Done"
            android:textOff="Update information"
            android:layout_gravity="center_horizontal" />



    </LinearLayout>

</ScrollView>